--- a/frontend/public/locales/de/recipe.json
+++ b/frontend/public/locales/de/recipe.json
@@ -1,26 +1,26 @@
 {
     "button": {
-        "add-tags": "Tags hinzufügen",
-        "back": "Zurück",
+        "add-tags": "Tags hinzuf\u00fcgen",
+        "back": "Zur\u00fcck",
         "copy": "Kopieren",
         "create": "Rezept erstellen",
-        "create-short": "Hinzufügen",
-        "delete": "Löschen",
+        "create-short": "Hinzuf\u00fcgen",
+        "delete": "L\u00f6schen",
         "edit": "Bearbeiten",
         "next": "Weiter",
         "update": "Rezept aktualisieren"
     },
     "dialog": {
-        "delete-description": "Möchtest du dieses Rezept wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
-        "delete-title": "Rezept löschen"
+        "delete-description": "M\u00f6chtest du dieses Rezept wirklich l\u00f6schen? Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
+        "delete-title": "Rezept l\u00f6schen"
     },
     "error": {
-        "description-required": "Eine Beschreibung für das Rezept ist erforderlich",
+        "description-required": "Eine Beschreibung f\u00fcr das Rezept ist erforderlich",
         "ingre-amount": "Die Zutatenmenge darf nicht leer oder null sein",
         "ingre-name": "Bitte gib einen Namen an",
         "ingre-unit": "Bitte gib eine Einheit an",
         "name-required": "Ein Rezeptname ist erforderlich",
-        "step-length-255": "Einzelschritt darf nicht länger als 255 Zeichen sein",
+        "step-length-255": "Einzelschritt darf nicht l\u00e4nger als 255 Zeichen sein",
         "step-length-zero": "Einzelschritt darf nicht leer sein",
         "too-long": "Die Eingabe ist zu lang. Maximal 255 Zeichen erlaubt"
     },
@@ -35,7 +35,7 @@
         "ingredients": "Liste aller Zutaten",
         "ingredients-title": "Gib deine Zutaten ein",
         "overview-description": "Allgemeine Informationen zum Rezept",
-        "overview-title": "Rezeptübersicht",
+        "overview-title": "Rezept\u00fcbersicht",
         "step-title": "Gib deine Schritte ein",
         "steps": "Anleitung:"
     },
@@ -47,17 +47,21 @@
         "description": "Beschreibung des Rezepts",
         "name": "Name des Rezepts",
         "name-ingredients": "Zutatenname",
-        "select-tags": "Tags auswählen",
+        "select-tags": "Tags ausw\u00e4hlen",
         "step": "Schritt",
         "tags-empty": "Keine Tags gefunden"
     },
     "stepper": {
-        "ingredients-description": "Zutaten für das Rezept hinzufügen",
+        "ingredients-description": "Zutaten f\u00fcr das Rezept hinzuf\u00fcgen",
         "ingredients-title": "Zutaten",
         "meta-description": "Allgemeine Informationen angeben",
         "meta-title": "Allgemeine Informationen",
-        "steps-description": "Anleitungsschritte für das Rezept hinzufügen",
+        "steps-description": "Anleitungsschritte f\u00fcr das Rezept hinzuf\u00fcgen",
         "steps-title": "Anleitung"
     },
     "toast": {
-        "created-success": "R
+        "created-success": "Rezept wurde erfolgreich erstellt",
+        "deleted-success": "Rezept wurde erfolgreich gel\u00f6scht",
+        "updated-success": "Rezept wurde erfolgreich aktualisiert"
+    }
+}
